Add 'Combined and Finalized' button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <div>
     <button id="downloadStripeBtn" disabled>Download Stripe CSV</button>
   </div>
+
+    <div>
+    <button id="downloadCombinedFinalizedBtn" disabled>Download Combined + Finalized CSV</button>
+  </div>
   
   <script src="index.js"></script>
 </body>
